Fix: Mod readme and notebook due to binder not working; removed un-needed token

--- a/protocol-timer.ipynb
+++ b/protocol-timer.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,15 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "parser = ConfigParser()\n",
     "\n",
     "_ = parser.read('token.secrets')\n",
-    "\n",
-    "api_token = parser.get('discord', 'bot_token')\n",
     "\n",
     "channel_id = parser.get('discord', 'channel_id')\n",
     "\n",
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +214,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Start the protocol\n",
+       "**When you are ready to begin, run the cell below**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
     "\n",
@@ -234,6 +246,76 @@
     "create_new_cell('send_discord_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")')\n",
     "\n",
     "create_new_cell(\"#------ Click here, then run each cells below ------#\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#------ Click here, then run each cells below ------#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_discord_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 1: Hello World**') \n",
+    "print('Duration is 0.083 minutes') \n",
+    "countdown(df.Duration.iloc[2], df.Combined.iloc[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 2: Foo**') \n",
+    "print('Duration is 0.1 minutes') \n",
+    "countdown(df.Duration.iloc[1], df.Combined.iloc[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('**Step 3: Bar**') \n",
+    "print('Duration is 0.167 minutes') \n",
+    "countdown(df.Duration.iloc[0], df.Combined.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_discord_message(f\"---- PROTOCOL COMPLETE at {current_datetime()} ----\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#------ End of protocol ------# \n",
+    " #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving"
    ]
   }
  ],
