Added TTS and rich formatted webhook; CFF, Quarto, bib

--- a/protocol-timer.ipynb
+++ b/protocol-timer.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
     "\n",
     "    pbar.refresh()\n",
     "    display(f\"COMPLETED {step_text}\")\n",
-    "    send_discord_message(f\"COMPLETED {step_text} in {step_text}\")\n",
+    "    send_discord_message(f\"COMPLETED {step_text}.\")\n",
     "    \n",
     "def send_discord_message(content):\n",
     "    payload = {\n",
@@ -154,7 +154,7 @@
     "        \"Content-Type\": \"application/json\"\n",
     "    }\n",
     "\n",
-    "    response = requests.post(webhook_url, data=json.dumps(payload), headers=headers)\n",
+    "    response = requests.post(webhook_url, data=json.dumps(content), headers=headers)\n",
     "\n",
     "    if response.status_code == 204:\n",
     "        print(\"Discord notification successful!\")\n",
@@ -181,9 +181,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Step Number</th>\n",
+       "      <th>Step Text</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>Combined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Paraffin (60 C)</td>\n",
+       "      <td>1:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 15: Paraffin (60 C)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Paraffin (60 C)</td>\n",
+       "      <td>1:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 14: Paraffin (60 C)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Paraffin (60 C)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 13: Paraffin (60 C)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Xylene (RT)</td>\n",
+       "      <td>1:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 12: Xylene (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Xylene (RT)</td>\n",
+       "      <td>0:40:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 11: Xylene (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Xylene (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 10: Xylene (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Xylene (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 9: Xylene (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>100% Ethanol (RT)</td>\n",
+       "      <td>1:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 8: 100% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>100% Ethanol (RT)</td>\n",
+       "      <td>0:50:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 7: 100% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6</td>\n",
+       "      <td>100% Ethanol (RT)</td>\n",
+       "      <td>0:45:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 6: 100% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5</td>\n",
+       "      <td>95% Ethanol (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 5: 95% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>4</td>\n",
+       "      <td>95% Ethanol (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 4: 95% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>3</td>\n",
+       "      <td>80% Ethanol (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 3: 80% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>75% Ethanol (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Step 2: 75% Ethanol (RT)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Formalin (RT)</td>\n",
+       "      <td>0:30:00</td>\n",
+       "      <td>Protocol from dx.doi.org/10.17504/protocols.io...</td>\n",
+       "      <td>Step 1: Formalin (RT)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Step Number          Step Text Duration  \\\n",
+       "0            15    Paraffin (60 C)  1:30:00   \n",
+       "1            14    Paraffin (60 C)  1:00:00   \n",
+       "2            13    Paraffin (60 C)  0:30:00   \n",
+       "3            12        Xylene (RT)  1:00:00   \n",
+       "4            11        Xylene (RT)  0:40:00   \n",
+       "5            10        Xylene (RT)  0:30:00   \n",
+       "6             9        Xylene (RT)  0:30:00   \n",
+       "7             8  100% Ethanol (RT)  1:00:00   \n",
+       "8             7  100% Ethanol (RT)  0:50:00   \n",
+       "9             6  100% Ethanol (RT)  0:45:00   \n",
+       "10            5   95% Ethanol (RT)  0:30:00   \n",
+       "11            4   95% Ethanol (RT)  0:30:00   \n",
+       "12            3   80% Ethanol (RT)  0:30:00   \n",
+       "13            2   75% Ethanol (RT)  0:30:00   \n",
+       "14            1      Formalin (RT)  0:30:00   \n",
+       "\n",
+       "                                              Comment  \\\n",
+       "0                                                 NaN   \n",
+       "1                                                 NaN   \n",
+       "2                                                 NaN   \n",
+       "3                                                 NaN   \n",
+       "4                                                 NaN   \n",
+       "5                                                 NaN   \n",
+       "6                                                 NaN   \n",
+       "7                                                 NaN   \n",
+       "8                                                 NaN   \n",
+       "9                                                 NaN   \n",
+       "10                                                NaN   \n",
+       "11                                                NaN   \n",
+       "12                                                NaN   \n",
+       "13                                                NaN   \n",
+       "14  Protocol from dx.doi.org/10.17504/protocols.io...   \n",
+       "\n",
+       "                     Combined  \n",
+       "0    Step 15: Paraffin (60 C)  \n",
+       "1    Step 14: Paraffin (60 C)  \n",
+       "2    Step 13: Paraffin (60 C)  \n",
+       "3        Step 12: Xylene (RT)  \n",
+       "4        Step 11: Xylene (RT)  \n",
+       "5        Step 10: Xylene (RT)  \n",
+       "6         Step 9: Xylene (RT)  \n",
+       "7   Step 8: 100% Ethanol (RT)  \n",
+       "8   Step 7: 100% Ethanol (RT)  \n",
+       "9   Step 6: 100% Ethanol (RT)  \n",
+       "10   Step 5: 95% Ethanol (RT)  \n",
+       "11   Step 4: 95% Ethanol (RT)  \n",
+       "12   Step 3: 80% Ethanol (RT)  \n",
+       "13   Step 2: 75% Ethanol (RT)  \n",
+       "14      Step 1: Formalin (RT)  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df = pd.read_csv('./protocol.csv')\n",
     "\n",
@@ -195,7 +405,7 @@
     "\n",
     "df = df.astype({'Step Number': 'int', 'Step Text': 'string', 'Duration': 'string', 'Combined': 'string'})\n",
     "\n",
-    "# display(df)"
+    "display(df)"
    ]
   },
   {
@@ -214,23 +424,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "## Start the protocol\n",
-       "**When you are ready to begin, run the cell below**"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_new_cell(\"#------ End of protocol ------# \\n #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving\")\n",
     "\n",
@@ -250,78 +446,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Discord notification successful!\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = \"Starting a new laboratory protocol\"\n",
+    "\n",
+    "## h/t https://birdie0.github.io/discord-webhooks-guide\n",
+    "\n",
+    "def compose_discord_json(message):\n",
+    "    json_payload = {\n",
+    "        \"content\": message, \n",
+    "        \"username\": \"Protocol Timer\",\n",
+    "        \"avatar_url\": \"https://raw.githubusercontent.com/github/explore/149e057770c384ddaba0393b369c2c8f16e433bb/topics/jupyter-notebook/jupyter-notebook.png\",\n",
+    "        \"tts\": True,\n",
+    "        \"embeds\": [\n",
+    "            {\n",
+    "                \"title\": \"Protocol Timer: FFPE\",\n",
+    "                \"type\": \"rich\",\n",
+    "                \"timestamp\": datetime.datetime.utcnow().strftime('%Y-%m-%dT%H:%M:%SZ'),\n",
+    "                \"fields\": [\n",
+    "                    {\n",
+    "                        \"name\": \"Step #\",\n",
+    "                        \"value\": \"1\",\n",
+    "                        \"inline\": True\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"name\": \"Duration\",\n",
+    "                        \"value\": \"1:30\",\n",
+    "                        \"inline\": True\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"name\": \"Procedure\",\n",
+    "                        \"value\": message,\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"name\": \"Comment\",\n",
+    "                        \"value\": \"Insert some comment here\"\n",
+    "                    },\n",
+    "                    ]\n",
+    "            }\n",
+    "        ],\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    return json_payload\n",
+    "\n",
+    "send_discord_message(compose_discord_json(message))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#------ Click here, then run each cells below ------#"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "send_discord_message(f\"---- STARTING PROTOCOL at {current_datetime()} ----\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 1: Hello World**') \n",
-    "print('Duration is 0.083 minutes') \n",
-    "countdown(df.Duration.iloc[2], df.Combined.iloc[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 2: Foo**') \n",
-    "print('Duration is 0.1 minutes') \n",
-    "countdown(df.Duration.iloc[1], df.Combined.iloc[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('**Step 3: Bar**') \n",
-    "print('Duration is 0.167 minutes') \n",
-    "countdown(df.Duration.iloc[0], df.Combined.iloc[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "send_discord_message(f\"---- PROTOCOL COMPLETE at {current_datetime()} ----\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#------ End of protocol ------# \n",
-    " #When you have reached this point, you can delete all of the protocol steps which have been created, or simply close this file without saving"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +534,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f240ef9210770de62a103ed9efe3828a4a2208dd13f05a72145b82e58b2a9c12"
+    "hash": "764a882783e0d6ecd0dfdda9fcfe5b38a2ab4da3f0839cc15c8a5c5cb167a819"
    }
   }
  },
